Add Document.Element loading in order to replace Document.Node