@@ -21,12 +21,14 @@ import net.aeten.core.Factory;
 import net.aeten.core.Identifiable;
 import net.aeten.core.Predicate;
 import net.aeten.core.parsing.Document;
+import net.aeten.core.parsing.Document.Element.ElementType;
 
 /**
- *
+ * 
  * @author Thomas Pérennou
  */
-public class FieldInitFactory<T, P> implements Factory<T, Void> {
+public class FieldInitFactory<T, P> implements
+      Factory<T, Void> {
 
 	private final SpiFactory<T, P> factory;
 	private final P parameter;
@@ -41,126 +43,93 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 		return factory.create(parameter);
 	}
 
-	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public static Factory<Object, Void> create(final Document.Tag tag, final Class<?> type, final List<Class<?>> parameterizedTypes, final ClassLoader classLoader) {
-		if (tag.value == null) {
-			return new Factory<Object, Void>() {
+	public static Factory<Object, Void> create(final Document.Element configuration, final Class<?> type, final List<Class<?>> parameterizedTypes, final ClassLoader classLoader) {
+		// Simple class name given, try default constructor
+		if (configuration.value == null || configuration.elementType == ElementType.STRING && configuration.asString().isEmpty()) {
+			if (configuration.valueType == null) {
+				throw new IllegalArgumentException("Empty configuration");
+			}
+			return getFactoryFromClassName(configuration.valueType, classLoader);
+		}
 
-				@Override
-				public Object create(Void context) {
-					try {
-						return classLoader.loadClass(tag.type).newInstance();
-					} catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
-						throw new IllegalArgumentException(ex);
-					}
-				}
-			};
-		} else if (tag.value instanceof String) {
-			return new Factory<Object, Void>() {
+		// Only one textual value
+		else if (configuration.elementType == ElementType.STRING) {
+			return getFactoryFromSimpleTextualValue(configuration.asString(), type, parameterizedTypes, classLoader);
+		}
 
-				@Override
-				public Object create(Void context) {
-					try {
-						return Service.getProvider((Class<? extends Identifiable>)type, (String) tag.value);
-					} catch (ClassCastException | NoSuchElementException exception) {
-						try {
-							return Service.getProvider(SpiFactory.class, new Predicate<SpiFactory>() {
-								@Override
-								public boolean evaluate(SpiFactory element) {
-									if (element.getParameterType().equals(String.class) && element.getTypes().length > 0) {
-										for (Class<?> t : element.getTypes()) {
-											if (t.equals(type)) {
-												return true;
-											}
-										}
-									}
-									return false;
-								}
-							}).create(tag.value);
-						} catch (NoSuchElementException nse) {
-							throw new NoSuchElementException("Unable to find " + SpiFactory.class.getName() + " for " + type.getName());
-						}
-					}
-				}
-			};
-		} else if (tag.value instanceof Document.Entry) {
-			final Document.Entry entry = (Document.Entry) tag.value;
+		// Configuration given
+		else {
 			try {
-				return new FieldInitFactory<>(Service.getProvider(SpiFactory.class, new Predicate<SpiFactory>() {
-
-					@Override
-					public boolean evaluate(SpiFactory element) {
-						if (element.getParameterType().equals(Document.Tag.class) && element.getTypes().length > 0) {
-							for (Class<?> t : element.getTypes()) {
-								if (t.equals(type)) {
-									return true;
-								}
-							}
-						}
-						return false;
-					}
-				}), tag);
-			} catch (NoSuchElementException exception) {
-				if (type == List.class) {
-					return new Factory<Object, Void>() {
-
-						@Override
-						public Object create(Void context) {
-							List<Object> list = new ArrayList<>();
-							for (Document.Tag tag : entry.tags) {
-								Class<?> elementType = parameterizedTypes.get(0);
-								list.add(FieldInitFactory.create(tag, elementType, Collections.<Class<?>>emptyList(), elementType.getClassLoader()).create(null));
-							}
-							return list;
-						}
-					};
-				} else if (type == Map.class && parameterizedTypes.get(0) == String.class) {
-					return new Factory<Object, Void>() {
-
-						@Override
-						public Object create(Void context) {
-							Map<String, Object> map = new LinkedHashMap<>();
-							for (Document.Tag tag : entry.tags) {
-								Class<?> elementType = parameterizedTypes.get(1);
-								map.put(tag.name, FieldInitFactory.create(tag, elementType, Collections.<Class<?>>emptyList(), elementType.getClassLoader()).create(null));
-							}
-							return map;
-						}
-					};
-				} else {
+				return getFactoryWithSpiInitializer(type, configuration, classLoader);
+			} catch (IllegalArgumentException | NoSuchElementException argumentException) {
+				try {
+					return getFactoryWithSpiFactory(configuration, type);
+				} catch (Throwable exception) {
 					try {
-						if (tag.type == null) {
-							for (Constructor<?> constructor : type.getConstructors()) {
-								Annotation[][] annotations = constructor.getParameterAnnotations();
-								if (annotations.length == 1 && annotations[0].length == 1 && annotations[0][0] instanceof SpiInitializer) {
-									Class<?> initializerClass = constructor.getParameterTypes()[0];
-									Object initializer = initializerClass.getConstructor(SpiConfiguration.class).newInstance(new SpiConfiguration(entry));
-									return getFactory(constructor, initializer);
-								}
-							}
+						if (type.isAssignableFrom(List.class)) {
+							return getFactoryFromList(configuration, parameterizedTypes, classLoader);
+						} else if (type.isAssignableFrom(Map.class) && parameterizedTypes.get(0) == String.class) {
+							return getFactoryFromMap(configuration, parameterizedTypes, classLoader);
 						} else {
-							for (Constructor<?> constructor : classLoader.loadClass(tag.type).getConstructors()) {
-								Annotation[][] annotations = constructor.getParameterAnnotations();
-								if (annotations.length == 1 && annotations[0].length == 1 && annotations[0][0] instanceof SpiInitializer) {
-									Class<?> initializerClass = constructor.getParameterTypes()[0];
-									Object initializer = initializerClass.getConstructor(SpiConfiguration.class).newInstance(new SpiConfiguration(entry));
-									return getFactory(constructor, initializer);
-								}
-							}
+							return getFactoryWithSpiInitializer(type, configuration, classLoader);
 						}
-					} catch (NoSuchMethodException | ClassNotFoundException | InstantiationException | IllegalAccessException | InvocationTargetException ex) {
-						throw new IllegalArgumentException(String.format("Unable to load %s (%s) as %s", tag.name, tag.type, type), ex);
+					} catch (Throwable error) {
+						throw new IllegalArgumentException(configuration.toString(), error);
 					}
 				}
 			}
-
 		}
-		throw new IllegalArgumentException(tag.toString()); // Should not happend
 	}
 
-	private static Factory<Object, Void> getFactory(final Constructor<?> constructor, final Object parameter) {
-		return new Factory<Object, Void>() {
+	@SuppressWarnings({ "unchecked", "rawtypes" })
+	private static Factory<Object, Void> getFactoryWithSpiFactory(final Document.Element configuration, final Class<?> type) {
+		return new FieldInitFactory<>(Service.getProvider(SpiFactory.class, new Predicate<SpiFactory>() {
+			@Override
+			public boolean evaluate(SpiFactory element) {
+				if (element.getParameterType().equals(Document.Element.class) && element.getTypes().length > 0) {
+					for (Class<?> t : element.getTypes()) {
+						if (t.equals(type)) { return true; }
+					}
+				}
+				return false;
+			}
+		}), configuration);
+	}
 
+	private static Factory<Object, Void> getFactoryWithSpiInitializer(Class<?> type, Document.Element configuration, ClassLoader classLoader) throws IllegalArgumentException {
+		try {
+			if (configuration.valueType == null) {
+				return getFactoryWithSpiInitializer(type, configuration);
+			} else {
+				try {
+					return getFactoryWithSpiInitializer(classLoader.loadClass(configuration.valueType), configuration);
+				} catch (NoSuchElementException exception) {
+					try {
+						return getFactoryWithSpiInitializer(type, configuration);
+					} catch (NoSuchElementException exception2) {
+						throw new IllegalArgumentException("Unable to find construtor with SpiInitializer with neither " + configuration.valueType + " nor " + type + " for configuration = " + configuration, exception2);
+					}
+				}
+			}
+		} catch (ClassNotFoundException | NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException ex) {
+			throw new IllegalArgumentException(String.format("Unable to load %s (%s) as %s. Configuration = %s", configuration.value, configuration.valueType, type, configuration), ex);
+		}
+	}
+
+	private static Factory<Object, Void> getFactoryWithSpiInitializer(Class<?> type, Document.Element configuration) throws NoSuchElementException, NoSuchMethodException, SecurityException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+		for (Constructor<?> constructor : type.getConstructors()) {
+			Annotation[][] annotations = constructor.getParameterAnnotations();
+			if (annotations.length == 1 && annotations[0].length == 1 && annotations[0][0] instanceof SpiInitializer) {
+				Class<?> initializerClass = constructor.getParameterTypes()[0];
+				Object initializer = initializerClass.getConstructor(SpiConfiguration.class).newInstance(new SpiConfiguration(configuration));
+				return getFactoryWithSpiInitializer(constructor, initializer);
+			}
+		}
+		throw new NoSuchElementException("Unable to find construtor with SpiInitializer in class " + type + " for " + configuration);
+	}
+
+	private static Factory<Object, Void> getFactoryWithSpiInitializer(final Constructor<?> constructor, final Object parameter) {
+		return new Factory<Object, Void>() {
 			@Override
 			public Object create(Void context) {
 				try {
@@ -172,12 +141,85 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 		};
 	}
 
+	private static Factory<Object, Void> getFactoryFromClassName(final String className, final ClassLoader classLoader) {
+		return new Factory<Object, Void>() {
+			@Override
+			public Object create(Void context) {
+				try {
+					return classLoader.loadClass(className).newInstance();
+				} catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+					throw new IllegalArgumentException("Unable to instanciate " + className + " with default construtor", ex);
+				}
+			}
+		};
+	}
+
+	private static Factory<Object, Void> getFactoryFromList(final Document.Element configuration, final List<Class<?>> parameterizedTypes, final ClassLoader classLoader) {
+		return new Factory<Object, Void>() {
+			@Override
+			public Object create(Void context) {
+				List<Object> list = new ArrayList<>();
+				for (Document.Element child : configuration.asCollection()) {
+					Class<?> elementType = parameterizedTypes.get(0);
+					list.add(FieldInitFactory.create(child, elementType, Collections.<Class<?>> emptyList(), elementType.getClassLoader()).create(null));
+				}
+				return list;
+			}
+		};
+	}
+
+	private static Factory<Object, Void> getFactoryFromMap(final Document.Element configuration, final List<Class<?>> parameterizedTypes, final ClassLoader classLoader) {
+		return new Factory<Object, Void>() {
+			@Override
+			public Object create(Void context) {
+				Map<String, Object> map = new LinkedHashMap<>();
+				for (Document.Element child : configuration.asCollection()) {
+					Document.Tag tag = child.asTag();
+					Class<?> elementType = parameterizedTypes.get(1);
+					map.put(tag.getKey().asString(), FieldInitFactory.create(tag.getValue(), elementType, Collections.<Class<?>> emptyList(), elementType.getClassLoader()).create(null));
+				}
+				return map;
+			}
+		};
+	}
+
+	private static Factory<Object, Void> getFactoryFromSimpleTextualValue(final String value, final Class<?> type, final List<Class<?>> parameterizedTypes, final ClassLoader classLoader) {
+		return new Factory<Object, Void>() {
+			@SuppressWarnings({ "unchecked", "rawtypes" })
+			@Override
+			public Object create(Void context) {
+				try {
+					// Try to retrieve an Identifiable provider
+					return Service.getProvider((Class<? extends Identifiable>) type, value);
+				} catch (ClassCastException | NoSuchElementException exception) {
+					try {
+						// Second chance, try to retrieve a SpiFactory<type, String>
+						return Service.getProvider(SpiFactory.class, new Predicate<SpiFactory>() {
+							@Override
+							public boolean evaluate(SpiFactory element) {
+								if (element.getParameterType().equals(String.class) && element.getTypes().length > 0) {
+									for (Class<?> t : element.getTypes()) {
+										if (t.equals(type)) { return true; }
+									}
+								}
+								return false;
+							}
+						}).create(value);
+					} catch (NoSuchElementException nse) {
+						throw new NoSuchElementException("Unable to find " + SpiFactory.class.getName() + " for " + type.getName() + " with " + value);
+					}
+				}
+			}
+		};
+	}
+
 	@Provider(SpiFactory.class)
-	public static class StringFactory implements SpiFactory<String, String> {
+	public static class StringFactory implements
+	      SpiFactory<String, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{String.class};
+			return new Class[] { String.class };
 		}
 
 		@Override
@@ -192,11 +234,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class BooleanFactory implements SpiFactory<Boolean, String> {
+	public static class BooleanFactory implements
+	      SpiFactory<Boolean, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{Boolean.class, boolean.class};
+			return new Class[] { Boolean.class, boolean.class };
 		}
 
 		@Override
@@ -211,11 +254,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class IntegerFactory implements SpiFactory<Integer, String> {
+	public static class IntegerFactory implements
+	      SpiFactory<Integer, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{Integer.class, int.class};
+			return new Class[] { Integer.class, int.class };
 		}
 
 		@Override
@@ -230,11 +274,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class LongFactory implements SpiFactory<Long, String> {
+	public static class LongFactory implements
+	      SpiFactory<Long, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{Long.class, long.class};
+			return new Class[] { Long.class, long.class };
 		}
 
 		@Override
@@ -249,11 +294,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class FloatFactory implements SpiFactory<Float, String> {
+	public static class FloatFactory implements
+	      SpiFactory<Float, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{Float.class, float.class};
+			return new Class[] { Float.class, float.class };
 		}
 
 		@Override
@@ -268,11 +314,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class DoubleFactory implements SpiFactory<Double, String> {
+	public static class DoubleFactory implements
+	      SpiFactory<Double, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{Double.class, double.class};
+			return new Class[] { Double.class, double.class };
 		}
 
 		@Override
@@ -287,11 +334,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class BigIntegerFactory implements SpiFactory<BigInteger, String> {
+	public static class BigIntegerFactory implements
+	      SpiFactory<BigInteger, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{BigInteger.class};
+			return new Class[] { BigInteger.class };
 		}
 
 		@Override
@@ -306,11 +354,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class BigDecimalFactory implements SpiFactory<BigDecimal, String> {
+	public static class BigDecimalFactory implements
+	      SpiFactory<BigDecimal, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{BigDecimal.class};
+			return new Class[] { BigDecimal.class };
 		}
 
 		@Override
@@ -325,11 +374,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class InetAddressFactory implements SpiFactory<InetAddress, String> {
+	public static class InetAddressFactory implements
+	      SpiFactory<InetAddress, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{InetAddress.class};
+			return new Class[] { InetAddress.class };
 		}
 
 		@Override
@@ -348,11 +398,12 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 	}
 
 	@Provider(SpiFactory.class)
-	public static class InetSocketFactory implements SpiFactory<InetSocketAddress, String> {
+	public static class InetSocketFactory implements
+	      SpiFactory<InetSocketAddress, String> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{InetSocketAddress.class};
+			return new Class[] { InetSocketAddress.class };
 		}
 
 		@Override
@@ -366,7 +417,7 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 				String[] socket = value.split(":");
 				return new InetSocketAddress(InetAddress.getByName(socket[0]), Integer.valueOf(socket[1]));
 			} catch (UnknownHostException ex) {
-				throw new IllegalArgumentException(ex);
+				throw new IllegalArgumentException(value, ex);
 			}
 		}
 	}
@@ -376,7 +427,7 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{InputStream.class};
+			return new Class[] { InputStream.class };
 		}
 	}
 
@@ -385,28 +436,31 @@ public class FieldInitFactory<T, P> implements Factory<T, Void> {
 
 		@Override
 		public Class<?>[] getTypes() {
-			return new Class[]{OutputStream.class};
+			return new Class[] { OutputStream.class };
 		}
 	}
 
-	public static abstract class StreamFactory<T> implements SpiFactory<T, Document.Tag> {
+	public static abstract class StreamFactory<T> implements
+	      SpiFactory<T, Document.Element> {
 
 		@Override
-		public Class<Document.Tag> getParameterType() {
-			return Document.Tag.class;
+		public Class<Document.Element> getParameterType() {
+			return Document.Element.class;
 		}
 
+		@SuppressWarnings("unchecked")
 		@Override
-		public T create(Document.Tag configuration) {
-//			return (T) FieldInitFactory.create(configuration, configuration.type, Collections.<Class<?>>emptyList(), Thread.currentThread().getContextClassLoader()).;
+		public T create(Document.Element configuration) {
 			try {
-				@SuppressWarnings("unchecked")
-				Class<? extends T> type = (Class<? extends T>) Class.forName(configuration.type);
-				Document.Tag underlying = ((Document.Entry) configuration.value).tags.get(0);
-				if (!underlying.name.equals("underlying")) {
-					throw new IllegalArgumentException("Unexpected argument " + underlying.name + ". underlying was expected");
+				Class<? extends T> type = (Class<? extends T>) Class.forName(configuration.valueType);
+				if (configuration.asCollection().size() == 1 && configuration.asCollection().getFirst().asTag().getKey().asString().equals("underlying")) {
+					Document.Tag underlying = configuration.asCollection().getFirst().asTag();
+					return type.getConstructor(getTypes()[0]).newInstance(FieldInitFactory.create(underlying.getValue(), getTypes()[0], Collections.<Class<?>> emptyList(), Thread.currentThread().getContextClassLoader()).create(null));
 				}
-				return type.getConstructor(getTypes()[0]).newInstance(FieldInitFactory.create(underlying, type, Collections.<Class<?>>emptyList(), Thread.currentThread().getContextClassLoader()).create(null));
+				if (configuration.valueType != null) {
+					return (T) FieldInitFactory.create(configuration, type, Collections.<Class<?>> emptyList(), Thread.currentThread().getContextClassLoader()).create(null);
+				}
+				throw new IllegalArgumentException("Unable to create " + configuration);
 			} catch (NoSuchMethodException | SecurityException | ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
 				throw new IllegalArgumentException("Unable to create " + configuration, ex);
 			}
